[gd_scene load_steps=3 format=3 uid="uid://f5v6fes7r2bg"]

[ext_resource type="Script" path="res://paused_menu.gd" id="1_nplhy"]
[ext_resource type="FontFile" uid="uid://x7xgrdeg4sef" path="res://Font/tenderness.otf" id="2_1s0lw"]

[node name="PausedMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nplhy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.705882)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1s0lw")
theme_override_font_sizes/font_size = 32
text = "Paused"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1s0lw")
text = "Resume Game"

[node name="SettingBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1s0lw")
text = "Settings
"

[node name="QuitBtn" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1s0lw")
text = "Quit
"

[connection signal="pressed" from="GridContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="GridContainer/SettingBtn" to="." method="_on_setting_btn_pressed"]
[connection signal="pressed" from="GridContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
